@startuml 07_er_diagram
!define DIRECTION top to bottom
skinparam linetype ortho
skinparam backgroundColor #FEFEFE
skinparam entity {
    BackgroundColor #E3F2FD
    BorderColor #1976D2
}

entity "users\n(Pengguna)" as users {
    *id : INT
    --
    employee_number : VARCHAR (UNIQUE)
    name : VARCHAR
    email : VARCHAR (UNIQUE)
    password : VARCHAR
    phone : VARCHAR
    position : VARCHAR
    department_id : INT (FK, nullable)
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "departments\n(Departemen)" as departments {
    *id : INT
    --
    name : VARCHAR
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "roles\n(Peran)" as roles {
    *id : INT
    --
    name : VARCHAR (UNIQUE)
    guard_name : VARCHAR
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "model_has_roles\n(User ke Peran)" as model_has_roles {
    *model_id : INT
    *role_id : INT
    --
    model_type : VARCHAR
}

entity "tickets\n(Tiket)" as tickets {
    *id : INT
    uuid : VARCHAR (UNIQUE)
    --
    user_id : INT (FK)
    category_id : INT (FK)
    assigned_to : INT (FK, nullable)
    title : VARCHAR
    description : TEXT
    priority : ENUM(low,medium,high,critical)
    status : ENUM(open,in_progress,resolved,closed,cancelled)
    sla_deadline : TIMESTAMP
    resolved_at : TIMESTAMP
    resolved_confirmed_at : TIMESTAMP
    cancelled_at : TIMESTAMP
    rating : INT
    rating_comment : TEXT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "comments\n(Komentar)" as comments {
    *id : INT
    ticket_id : INT (FK)
    --
    user_id : INT (FK)
    message : TEXT
    is_internal : BOOLEAN
    attachments : JSON
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "categories\n(Kategori)" as categories {
    *id : INT
    --
    name : VARCHAR
    slug : VARCHAR (UNIQUE)
    description : TEXT
    deleted_at : TIMESTAMP
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "knowledge_bases\n(Basis Pengetahuan)" as knowledge_bases {
    *id : INT
    --
    title : VARCHAR
    slug : VARCHAR (UNIQUE)
    content : LONGTEXT
    category_id : INT (FK, nullable)
    author_id : INT (FK)
    is_published : BOOLEAN
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

entity "activity_logs\n(Log Aktivitas)" as activity_logs {
    *id : INT
    --
    user_id : INT (FK, nullable)
    ticket_id : INT (FK, nullable)
    action : VARCHAR
    description : TEXT
    created_at : TIMESTAMP
}

entity "notifications\n(Notifikasi)" as notifications {
    *id : UUID
    --
    type : VARCHAR
    notifiable_type : VARCHAR
    notifiable_id : INT
    data : JSON
    read_at : TIMESTAMP
    created_at : TIMESTAMP
}

entity "saw_configurations\n(Konfigurasi SAW)" as saw_configurations {
    *id : INT
    --
    code : VARCHAR (UNIQUE)
    name : VARCHAR
    type : ENUM(benefit,cost)
    weight : DECIMAL
    sort_order : INT
    created_at : TIMESTAMP
    updated_at : TIMESTAMP
}

departments ||--o{ users : "memiliki"
users ||--o{ model_has_roles : "memiliki"
roles ||--o{ model_has_roles : "memiliki"

users ||--o{ tickets : "membuat"
users ||--o{ tickets : "ditugaskan_ke"
categories ||--o{ tickets : "mengkategorikan"
tickets ||--o{ comments : "memiliki"
users ||--o{ comments : "menulis"

categories ||--o{ knowledge_bases : "mengkategorikan"
users ||--o{ knowledge_bases : "menulis"

users ||--o{ activity_logs : "melakukan"
tickets ||--o{ activity_logs : "terkait"

users ||--o{ notifications : "menerima"

@enduml
